roboshop_k8s_project/02-ingress-controller.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: roboshop-ingress
  namespace: roboshop
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  ingressClassName: nginx

  rules:
    - host: roboshop.dev
      http:
        paths:
          - path: /(.*)
            pathType: Prefix
            backend:
              service:
                name: frontend
                port:
                  number: 80

          - path: /users/(.*)
            pathType: Prefix
            backend:
              service:
                name: user
                port:
                  number: 8080

          - path: /catalogue/(.*)
            pathType: Prefix
            backend:
              service:
                name: catalogue
                port:
                  number: 8080

          - path: /cart/(.*)
            pathType: Prefix
            backend:
              service:
                name: cart
                port:
                  number: 8080

          - path: /shipping/(.*)
            pathType: Prefix
            backend:
              service:
                name: shipping
                port:
                  number: 8080

          - path: /payment/(.*)
            pathType: Prefix
            backend:
              service:
                name: payment
                port:
                  number: 8080
